package ca.mcmaster.pathfinder;

public interface Attribute {
    String getName();
    Object getValue();
}
